--- a/server/package.json
+++ b/server/package.json
@@ -10,12 +10,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@types/multer": "^1.4.12",
     "axios": "^1.9.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.2",
     "sqlite3": "^5.1.7",
     "typeorm": "^0.3.20"
   },
