--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc",
-    "test": "jest"
+    "test": "jest",
+    "create-admin": "ts-node src/scripts/createAdmin.ts"
   },
   "dependencies": {
     "@types/multer": "^1.4.12",
