--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "pg": "^8.11.3",
     "sqlite3": "^5.1.7",
     "typeorm": "^0.3.20"
@@ -33,7 +34,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "^20.11.24",
+    "@types/node": "^20.17.50",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   }
