--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "migration:revert": "npm run typeorm -- migration:revert -d src/config/database.ts"
   },
   "dependencies": {
+    "@types/helmet": "^0.0.48",
     "@types/multer": "^1.4.12",
     "axios": "^1.9.0",
     "bcryptjs": "^2.4.3",
@@ -24,6 +25,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "express-rate-limit": "^7.1.5",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
     "multer-storage-cloudinary": "^4.0.0",
