--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@types/helmet": "^0.0.48",
+    "@types/ioredis": "^4.28.10",
     "@types/multer": "^1.4.12",
     "axios": "^1.9.0",
     "bcryptjs": "^2.4.3",
@@ -26,6 +27,7 @@
     "express": "^4.18.3",
     "express-rate-limit": "^7.1.5",
     "helmet": "^8.1.0",
+    "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
     "multer-storage-cloudinary": "^4.0.0",
