--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@tanstack/react-query": "^5.56.2",
     "@types/express": "^5.0.2",
     "@types/multer": "^1.4.12",
+    "@types/react-helmet": "^6.1.11",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
